Fix composer on mobile, scroll to new reply

--- a/packages/core/ember/app/styles/flarum/composer.less
+++ b/packages/core/ember/app/styles/flarum/composer.less
@@ -59,6 +59,7 @@
   }
   .composer {
     position: fixed;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -71,7 +72,6 @@
       content: " ";
       .toolbar();
       opacity: 0;
-      .transition(opacity 0.5s);
 
       .visible& {
         opacity: 1;
